# pdfhero

./: .drone.yml  .gitignore  AGENTS.md  GEMINI.md  README.md  README.zh-TW.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/adapters/: api.py
backend/src/domain/: entities.py  interfaces.py
backend/src/infrastructure/: libreoffice_converter.py  mock_converter.py  pillow_converter.py
backend/src/use_cases/: convert_file.py
backend/tests/unit/: test_convert_file.py  test_libreoffice_converter.py  test_pillow_converter.py
docs/: ADSENSE_GUIDE.md  DOMAIN_REDIRECT_GUIDE.md  DRONE_CI_SETUP.md  EC2_SSH_KEY_GUIDE.md  GA4_EVENTS.md  GITHUB_ACTIONS_SETUP.md  SEO_ANALYTICS.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: FileUploader.tsx
frontend/src/context/: ThemeContext.tsx
nginx/: pdfhero.conf  rj-tw.com-redirect.conf
scripts/: deploy.sh  setup-domain-redirect.sh  setup-nginx.sh  setup-ssl.sh
